[gd_scene load_steps=19 format=3 uid="uid://myebb0n8nmac"]

[ext_resource type="Script" uid="uid://b2rqufy2kwywv" path="res://scene/enemys/boss/keine/keine.gd" id="1_w6a4s"]
[ext_resource type="Texture2D" uid="uid://qjkqd4eo88sb" path="res://asset/pic/enemy/白泽球.png" id="2_ndu7c"]
[ext_resource type="PackedScene" uid="uid://clvkueof1i4cp" path="res://scene/enemys/enemy_base/damageNum.tscn" id="3_rrecl"]
[ext_resource type="Script" uid="uid://cyi0g5onbgjw5" path="res://scene/enemys/enemy_base/mob_buffcomponent.gd" id="4_v0bqg"]
[ext_resource type="Theme" uid="uid://bi4f3b7qk68ct" path="res://ui/chinese_theme.tres" id="5_3pgrx"]
[ext_resource type="Texture2D" uid="uid://c140byctc4gq6" path="res://asset/pic/ui/battletalk_hr1.png" id="5_kqtkm"]
[ext_resource type="Texture2D" uid="uid://b23e7p8e7fa7h" path="res://asset/pic/bullet/轨迹.png" id="8_ko4ll"]
[ext_resource type="Texture2D" uid="uid://crd3ovmlyuume" path="res://asset/pic/ui/HUD/BOSS血条（时符）填充.png" id="8_rmmu3"]
[ext_resource type="Texture2D" uid="uid://vonpqxbjfktq" path="res://asset/pic/ui/HUD/BOSS血条（符卡）.png" id="9_fav7k"]
[ext_resource type="Texture2D" uid="uid://qs16yps0n7e2" path="res://asset/pic/ui/HUD/BOSS血条（符卡）填充.png" id="10_i8gk4"]
[ext_resource type="Texture2D" uid="uid://2x1qvc7ql60h" path="res://asset/pic/ui/HUD/BOSS血条（非符+符卡）.png" id="11_m8gjf"]
[ext_resource type="Texture2D" uid="uid://c3cob7ohv4aoi" path="res://asset/pic/ui/HUD/BOSS血条（非符）填充.png" id="12_fav7k"]
[ext_resource type="Texture2D" uid="uid://tba5oo3powgg" path="res://asset/pic/ui/HUD/BOSS血条头像.png" id="12_i8gk4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4gakf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ndu7c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ndu7c")
}],
"loop": false,
"name": &"die",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_itioj"]
radius = 84.0

[sub_resource type="CircleShape2D" id="CircleShape2D_shwxr"]
radius = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqpgj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs83g"]
atlas = ExtResource("5_kqtkm")
region = Rect2(-5, 187, 260, 97)

[node name="aq_boss" type="CharacterBody2D" groups=["boss"]]
process_mode = 1
z_index = 1
z_as_relative = false
collision_layer = 2
collision_mask = 32
motion_mode = 1
safe_margin = 10.0
script = ExtResource("1_w6a4s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 15
position = Vector2(0, -4.9999895)
scale = Vector2(0.4, 0.39493674)
sprite_frames = SubResource("SpriteFrames_4gakf")
animation = &"die"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 15
shape = SubResource("CircleShape2D_itioj")

[node name="melee_damage_area" type="Area2D" parent="."]
visible = false
scale = Vector2(50, 50)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="melee_damage_area"]
shape = SubResource("CircleShape2D_shwxr")

[node name="melee_attack_cd" type="Timer" parent="melee_damage_area"]

[node name="danma" type="Node2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.926299, 2.5028e-06, 1.54018e-06, 1)
offset_left = -39.0
offset_top = -46.0
offset_right = 273.0
offset_bottom = -14.0
scale = Vector2(0.25, 0.125)
tooltip_text = "
"
theme_override_styles/fill = SubResource("StyleBoxFlat_nqpgj")
step = 1.0
value = 100.0
show_percentage = false

[node name="progress_timer" type="Timer" parent="."]

[node name="DamageNum" parent="." instance=ExtResource("3_rrecl")]

[node name="outscreen_disppear" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="buff" type="Node" parent="."]
script = ExtResource("4_v0bqg")

[node name="hud" type="CanvasLayer" parent="."]

[node name="card" type="CanvasLayer" parent="hud"]
visible = false

[node name="PopupPanel" type="TextureRect" parent="hud/card"]
modulate = Color(1, 1, 1, 0.356863)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -965.0
offset_top = -403.0
offset_right = 955.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(960, 60)
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_xs83g")
expand_mode = 1

[node name="RichTextLabel" type="Label" parent="hud/card"]
offset_left = -236.0
offset_top = 128.0
offset_right = 2164.0
offset_bottom = 369.0
scale = Vector2(0.1, 0.6)
pivot_offset = Vector2(1200, 120)
size_flags_horizontal = 4
theme = ExtResource("5_3pgrx")
theme_override_font_sizes/font_size = 200
text = "数符「直线、射线、线段」"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp" type="Node2D" parent="hud"]

[node name="fullcard" type="Sprite2D" parent="hud/hp"]
position = Vector2(1795, 581)
texture = ExtResource("9_fav7k")

[node name="full_mask" type="ReferenceRect" parent="hud/hp/fullcard"]
z_index = -1
clip_contents = true
layout_direction = 2
offset_left = -60.269794
offset_top = -944.3779
offset_right = -5.2697945
offset_bottom = -86.37793
rotation = 3.1415927
pivot_offset = Vector2(62, 655)
border_color = Color(1, 0, 0, 0)

[node name="fullcard" type="Sprite2D" parent="hud/hp/fullcard/full_mask"]
z_index = 1
position = Vector2(27.72998, 426.62204)
rotation = 3.1415925
texture = ExtResource("10_i8gk4")

[node name="time_mask" type="ReferenceRect" parent="hud/hp/fullcard"]
z_index = -1
clip_contents = true
layout_direction = 2
offset_left = -60.269794
offset_top = -944.3779
offset_right = -5.2697945
offset_bottom = -86.37793
rotation = 3.1415927
pivot_offset = Vector2(62, 655)
border_color = Color(1, 0, 0, 0)

[node name="timecard" type="Sprite2D" parent="hud/hp/fullcard/time_mask"]
z_index = 1
position = Vector2(26.72998, 428.62204)
rotation = 3.1415925
texture = ExtResource("8_rmmu3")

[node name="nons" type="Sprite2D" parent="hud/hp"]
visible = false
position = Vector2(1795, 581)
texture = ExtResource("11_m8gjf")

[node name="nons_mask" type="ReferenceRect" parent="hud/hp/nons"]
z_index = -1
clip_contents = true
layout_direction = 2
offset_left = -60.269775
offset_top = -1157.0
offset_right = -5.2697754
offset_bottom = -512.0
rotation = 3.1415927
pivot_offset = Vector2(62, 655)
border_color = Color(1, 0, 0, 0)

[node name="non_cont" type="Sprite2D" parent="hud/hp/nons/nons_mask"]
z_index = 1
position = Vector2(27, 215)
rotation = 3.1415927
texture = ExtResource("12_fav7k")

[node name="quar_mask" type="ReferenceRect" parent="hud/hp/nons"]
z_index = -1
clip_contents = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.5
offset_top = -631.0
offset_right = 8.5
offset_bottom = -415.0
grow_horizontal = 2
grow_vertical = 0
rotation = 3.1415927
border_color = Color(1, 0, 0, 0)

[node name="quar_cont" type="Sprite2D" parent="hud/hp/nons/quar_mask"]
z_index = 1
position = Vector2(26.000004, 431)
rotation = 3.1415927
texture = ExtResource("10_i8gk4")

[node name="icon" type="Sprite2D" parent="hud/hp"]
position = Vector2(1812, 992)
scale = Vector2(0.8, 0.8)
texture = ExtResource("12_i8gk4")

[node name="轨迹" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2.5, 0.5)
texture = ExtResource("8_ko4ll")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
[connection signal="timeout" from="progress_timer" to="." method="_on_progress_timer_timeout"]
